--- a/tests/dummy/app/templates/examples.hbs
+++ b/tests/dummy/app/templates/examples.hbs
@@ -1,2 +1,2 @@
-({{link-to 'Go back to index' 'application'}})<br>
+{{model.name}} ({{link-to 'Go back to index' 'examples.index'}})<br>
 {{outlet}}
