Renamed chart "options" to "config" for consistency

--- a/tests/dummy/app/templates/examples/responsive.hbs
+++ b/tests/dummy/app/templates/examples/responsive.hbs
@@ -20,7 +20,7 @@
   {{plot-ly
     chartData=chartData
     chartLayout=chartLayout
-    chartOptions=chartOptions
+    chartConfig=chartConfig
     isResponsive=true
   }}
 </div>
