--- a/tests/dummy/app/templates/examples/legend-events.hbs
+++ b/tests/dummy/app/templates/examples/legend-events.hbs
@@ -1,7 +1,7 @@
 {{plot-ly
   chartData=chartData
   chartLayout=chartLayout
-  chartOptions=chartOptions
+  chartConfig=chartConfig
   plotlyEvents=plotlyEvents
   onPlotlyEvent=(action 'onPlotlyEvent')
 }}
