--- a/tests/dummy/app/templates/examples/lasso.hbs
+++ b/tests/dummy/app/templates/examples/lasso.hbs
@@ -3,7 +3,7 @@
   chartLayout=chartLayout
   chartConfig=chartConfig
   plotlyEvents=plotlyEvents
-  onPlotlyEvent=(action 'onPlotlyEvent')
+  onPlotlyEvent=(action "onPlotlyEvent")
 }}
 Selected traces: <pre>{{json-stringify selectedTraces spaces=null}}</pre>
 Selected points: <pre>{{json-stringify selectedPoints spaces=2}}</pre>
