--- a/tests/dummy/app/templates/examples/legend-events.hbs
+++ b/tests/dummy/app/templates/examples/legend-events.hbs
@@ -3,7 +3,7 @@
   chartLayout=chartLayout
   chartConfig=chartConfig
   plotlyEvents=plotlyEvents
-  onPlotlyEvent=(action 'onPlotlyEvent')
+  onPlotlyEvent=(action "onPlotlyEvent")
 }}
 <ul>
   <li>lastClicked: {{lastClicked}}</li>
