chore: revert to pre-octane template-linter rules

--- a/tests/dummy/app/templates/examples/live-colors.hbs
+++ b/tests/dummy/app/templates/examples/live-colors.hbs
@@ -7,8 +7,8 @@
   isResponsive=true
 }}
 
-<button onclick={{action "start"}}>Start</button>
-<button onclick={{action "stop"}}>Stop</button>
-<button onclick={{action "clear"}}>Clear</button>
+<button onclick={{action "start"}} type="button">Start</button>
+<button onclick={{action "stop"}} type="button">Stop</button>
+<button onclick={{action "clear"}} type="button">Clear</button>
 
 currentTrace: {{currentTrace}}, currentIndex: {{currentIndex}}
