--- a/tests/dummy/app/templates/examples/static.hbs
+++ b/tests/dummy/app/templates/examples/static.hbs
@@ -1,5 +1,5 @@
-{{plot-ly
-  chartData=chartData
-  chartLayout=chartLayout
-  chartConfig=chartConfig
-}}
+<Plotly
+  @chartData={{this.chartData}}
+  @chartLayout={{this.chartLayout}}
+  @chartConfig={{this.chartConfig}}
+/>
