WIP: fix: remove layout; glimmer components don't have that

--- a/tests/dummy/app/templates/examples/index.hbs
+++ b/tests/dummy/app/templates/examples/index.hbs
@@ -1,6 +1,6 @@
 <h3>List of examples</h3>
 <ul>
-  {{#each model as |example|}}
+  {{#each this.model as |example|}}
     <li>
       {{!--
       example.id = {{example.id}}<br>
