--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -1,1 +1,1 @@
-Check out the {{#link-to "examples.index"}}examples page{{/link-to}}
+Check out the <LinkTo @route="examples.index">examples page</LinkTo>
