WIP: don't load plotly.js dynamically; checked -> @checked; ...

--- a/addon/components/plotly.hbs
+++ b/addon/components/plotly.hbs
@@ -3,4 +3,9 @@
   {{did-insert this._newPlot}}
   {{did-update this._react}}
   ...attributes
->{{yield}}</div>
+>
+  <div style="display">
+    {{}}
+  </div>
+  {{yield}}
+</div>
