--- a/tests/dummy/app/templates/examples/checkboxes.hbs
+++ b/tests/dummy/app/templates/examples/checkboxes.hbs
@@ -1,7 +1,7 @@
 <ul>
   {{#each this.dataSets as |dataSet|}}
     <li>
-      <Input @type="checkbox" name={{dataSet.name}} checked={{dataSet.isPassedToPlotly}} />
+      <Input @type="checkbox" name={{dataSet.name}} @checked={{dataSet.isPassedToPlotly}} />
       <label for={{dataSet.name}}>{{dataSet.name}}</label>
     </li>
   {{/each}}
@@ -10,5 +10,6 @@
   foo="bar"
   @chartData={{this.chartData}}
   @chartLayout={{this.chartLayout}}
-  @chartLayout={{this.chartLayout}}
+  @chartConfig={{this.chartConfig}}
 />
+{{log "HBS-DEBUG this.chartData" this.chartData}}
