--- a/tests/dummy/app/templates/examples/blank.hbs
+++ b/tests/dummy/app/templates/examples/blank.hbs
@@ -1,5 +1,5 @@
 <Plotly
-  @chartData={{this.chartData}}
-  @chartLayout={{this.chartLayout}}
-  @chartConfig={{this.chartConfig}}
+  @data={{this.data}}
+  @layout={{this.layout}}
+  @config={{this.config}}
 />
