--- a/tests/dummy/app/templates/examples/checkboxes.hbs
+++ b/tests/dummy/app/templates/examples/checkboxes.hbs
@@ -11,7 +11,7 @@
   {{/each}}
 </ul>
 <Plotly
-  @chartData={{this.chartData}}
-  @chartLayout={{this.chartLayout}}
-  @chartConfig={{this.chartConfig}}
+  @data={{this.data}}
+  @layout={{this.layout}}
+  @config={{this.config}}
 />
