--- a/tests/dummy/app/templates/examples/lasso.hbs
+++ b/tests/dummy/app/templates/examples/lasso.hbs
@@ -1,7 +1,7 @@
 <Plotly
-  @chartData={{this.chartData}}
-  @chartLayout={{this.chartLayout}}
-  @chartConfig={{this.chartConfig}}
+  @data={{this.data}}
+  @layout={{this.layout}}
+  @config={{this.config}}
   @on={{hash
     plotly_click=this.onPlotlyClick
     plotly_selected=this.onPlotlySelected
