--- a/tests/dummy/app/templates/examples/live-colors.hbs
+++ b/tests/dummy/app/templates/examples/live-colors.hbs
@@ -1,7 +1,7 @@
 {{plot-ly
-  chartData=chartData
-  chartLayout=chartLayout
-  chartConfig=chartConfig
+  data=data
+  layout=layout
+  config=config
   plotlyEvents=plotlyEvents
   onPlotlyEvent=(action "onPlotlyEvent")
   isResponsive=true
