--- a/tests/dummy/app/templates/examples/responsive.hbs
+++ b/tests/dummy/app/templates/examples/responsive.hbs
@@ -18,9 +18,9 @@
 
 <div class="responsive-container">
   <Plotly
-    @chartData={{this.chartData}}
-    @chartLayout={{this.chartLayout}}
-    @chartConfig={{this.chartConfig}}
+    @data={{this.data}}
+    @layout={{this.layout}}
+    @config={{this.config}}
     @isResponsive=true
   />
 </div>
