--- a/tests/dummy/app/templates/examples/legend-events.hbs
+++ b/tests/dummy/app/templates/examples/legend-events.hbs
@@ -1,7 +1,7 @@
 <Plotly
-  @chartData={{this.chartData}}
-  @chartLayout={{this.chartLayout}}
-  @chartConfig={{this.chartConfig}}
+  @data={{this.data}}
+  @layout={{this.layout}}
+  @config={{this.config}}
   @plotlyEvents={{this.plotlyEvents}}
   @onPlotlyEvent={{action "onPlotlyEvent"}}
 />
