--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,3 +1,5 @@
-{{page-title "ember-cli-plotly tests"}}
-<h2 id="title">ember-cli-plotly</h2>
+{{page-title "Dummy"}}
+
+<h2 id="title">Welcome to Ember</h2>
+
 {{outlet}}
