--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -3,11 +3,20 @@
 <h2 id="title">Welcome to Ember</h2>
 
 <Plotly
-  @data={{hash
+  @data={{array
+  (hash
+    name="y = 2x"
     x=(array 1 2 3)
-    y=(array 1 2 3)
+    y=(array 2 4 6)
     type="scatter"
-  }}
+  )
+  (hash
+    name="y = -x - 1"
+    x=(array 0 2)
+    y=(array -1 -3)
+    type="scatter"
+  )
+}}
 />
 
 {{outlet}}
