--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,22 +1,3 @@
-{{page-title "Dummy"}}
-
-<h2 id="title">Welcome to Ember</h2>
-
-<Plotly
-  @data={{array
-  (hash
-    name="y = 2x"
-    x=(array 1 2 3)
-    y=(array 2 4 6)
-    type="scatter"
-  )
-  (hash
-    name="y = -x - 1"
-    x=(array 0 2)
-    y=(array -1 -3)
-    type="scatter"
-  )
-}}
-/>
-
+{{page-title "ember-cli-plotly tests"}}
+<h2 id="title">ember-cli-plotly</h2>
 {{outlet}}
